ui updates much cleaner now

--- a/.buildbouncer.yaml
+++ b/.buildbouncer.yaml
@@ -10,3 +10,7 @@ insults:
   mode: "snarky"   # polite | snarky | nuclear
   file: "assets/insults/default.json"
   locale: "en"
+
+banter:
+  file: "assets/banter/default.json"
+  locale: "en"
