--- a/assets/templates/config_react.yaml
+++ b/assets/templates/config_react.yaml
@@ -10,9 +10,10 @@ checks:
 
 insults:
   mode: "snarky"
-  file: "assets/insults/default.json"
+  file: ".buildbouncer/assets/insults/default.json"
   locale: "en"
 
 banter:
-  file: "assets/banter/default.json"
+  file: ".buildbouncer/assets/banter/default.json"
   locale: "en"
+
