runner package refctor and cleanup

--- a/.buildbouncer/config.yaml
+++ b/.buildbouncer/config.yaml
@@ -58,7 +58,7 @@ checks:
       source: ci:ci
       name: ci:ci:test-matrix.os:go-test
       run: go test ./...
-      shell: cmd
+      shell: pwsh
       os: windows
       requires: go
 insults:
