UI/UX update...ona cli app but yea

--- a/.buildbouncer/config.yaml
+++ b/.buildbouncer/config.yaml
@@ -61,6 +61,9 @@ checks:
       shell: pwsh
       os: windows
       requires: go
+protection:
+    level: moderate
+    interactive: true
 insults:
     mode: snarky
     file: .buildbouncer/assets/insults/default.json
