--- a/assets/templates/config_go.yaml
+++ b/assets/templates/config_go.yaml
@@ -6,6 +6,10 @@ checks:
   - name: "lint"
     run: "go vet ./..."
 
+protection:
+  level: "moderate"  # lax | moderate | strict
+  interactive: true
+
 insults:
   mode: "snarky"
   file: ".buildbouncer/assets/insults/default.json"
